--- a/README
+++ b/README
@@ -1,1 +1,13 @@
 This is the Wordpress theme designed by me, for demo you can see http://tingchen.info. Note: The theme is not mature at this moment!
+
+To setup this theme:
+* First, you need to hack the kernel file (wp-blog-header.php) of WP first, change:
+	wp();
+* to
+	$url_array = explode('?', $_SERVER['REQUEST_URI']);
+	if ( isset($_GET['s']) and ! isset($_GET['view']) ):
+		$url_array[1] .= '&view=cat';
+		$_SERVER['REQUEST_URI'] .= '&view=cat';
+	endif;
+	wp($url_array[1]);
+* Second, you active the theme like a normal theme.
